<resources>
    <string name="app_name">Mobile Devlopment Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="make_new_flash_card">Make new flash card?</string>
    <string name="next">Next</string>
    <string name="definition">definition</string>
    <string name="term">term</string>
    <string name="add">ADD</string>
    <string name="subject">Subject</string>
    <string name="make_new_flashcard_set">make new flashcard set?</string>
    <string name="add_event">Add Event</string>


    <!-- Temp Login for testing -->
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="keep_me_signed_in">Keep me signed in</string>
    <string name="delete">Delete</string>
    <string name="log_out">Log Out</string>
    <string name="home_page">Home Page</string>
    <string name="play_flashcard_game">Play Flashcard Game</string>
    <string name="delete_view_flashcards">Delete/View Flashcards</string>
    <string name="view_calendar">View Calendar</string>
    <string name="make_a_flashcard">Make a Flashcard</string>
    <string name="make_sets">Make Sets</string>
</resources>