<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MakeFlashCards">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/make_new_flash_card" />
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:onClick="AddToDataBase"
        android:text="@string/next"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="677dp" />

    <EditText
        android:id="@+id/term"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/term" />

    <EditText
        android:id="@+id/definition"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/definition" />



</FrameLayout>