<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MakeSets">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:text="@string/make_new_flashcard_set" />

    <Spinner
        android:id="@+id/Subject"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:spinnerMode="dropdown"
        android:text="@string/subject" />

    <EditText
        android:id="@+id/Set"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="Set Name"
        />

    <Button
        android:id="@+id/Addset"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/add"

        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:text=""
        android:id="@+id/MESSAGE"
        />

</LinearLayout>